[package]
name = "tcod"
description = "The Rust bindings for the Doryen library (a.k.a. libtcod)."
version = "0.14.0"
homepage = "https://github.com/tomassedovic/tcod-rs"
repository = "https://github.com/tomassedovic/tcod-rs"
documentation = "http://tomassedovic.github.io/tcod-rs/tcod/index.html"
readme = "README.md"
keywords = ["gamedev", "roguelike", "libtcod"]
license = "WTFPL"
authors = ["Tomas Sedovic <tomas@sedovic.cz>",
           "Bastien Léonard <bastien.leonard@gmail.com>",
           "Darren Kaste <darrenkaste@gmail.com>",
           "Edu Garcia <arcnorj@gmail.com>",
           "Guillermo Galizzi <galizzi.guillermo@gmail.com>",
           "Gustorn <gustorn@gmail.com>",
           "Jared McFarland <jared.online@gmail.com>",
           "Jonny Gilchrist (@jgilchrist)",
           "LaylConway <laylconway@live.com>",
           "Moredread <code@andre-bubel.de>",
           "Nikita Pekin",
           "Paul Sanford <me@paulsanford.net>",
           "Pranz <jesper.fridefors@gmail.com>"]

[lib]
name = "tcod"
path = "src/lib.rs"

[dependencies]
bitflags = "0.1"
lazy_static = "0.1"
rustc-serialize = { optional = true, version = "0.3" }
serde = { optional = true, version = "1.0" }
serde_derive = { optional = true, version = "1.0" }

[features]

serialization = ["serde", "serde_derive"]

[dependencies.tcod-sys]
path = "tcod_sys"
version = "5.0.0"

[dev-dependencies]
rand = "0.3"
serde_json = "1.0"
