[package]
name = "tcod-sys"
description = "Raw FFI bindings & build script to link against libtcod."
version = "4.0.0"
license = "WTFPL"
homepage = "https://github.com/tomassedovic/tcod-rs"
repository = "https://github.com/tomassedovic/tcod-rs/tree/master/tcod-sys"
authors = ["tomas@sedovic.cz"]
links = "tcod"
build = "build.rs"
exclude = [
    "libtcod/lib/libz.a"
]

[lib]
name = "tcod_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3"
pkg-config = "0.3"
