[package]
name = "tcod-sys"
description = "Raw FFI bindings & build script to link against libtcod."
version = "5.0.1"
license = "WTFPL"
homepage = "https://github.com/tomassedovic/tcod-rs"
repository = "https://github.com/tomassedovic/tcod-rs/tree/master/tcod-sys"
authors = ["tomas@sedovic.cz"]
links = "tcod"
build = "build.rs"
exclude = [
    "libtcod/lib/libz.a"
]

[lib]
name = "tcod_sys"
path = "lib.rs"

[features]
dynlib = []

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
